# GenoFusion

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
GenoFusion/: README.md
GenoFusion/Utils/: __init__.py  dna_utils.py  functions.py
SequenceViewer/: README.md  example.fasta
SequenceViewer/app/: __init__.py  routes.py  sequence_tools.py
SequenceViewer/app/static/: genview.css
SequenceViewer/app/templates/: index.html  view.html
Tests/: test_imports.py
Tests/Utils/: GenBank.py
